# ai-chatbot-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  models.py  v1.py
app/core/: __init__.py  config.py  logging.py
app/services/: __init__.py  ai_factory.py  ai_service.py  gemini_service.py
docs/: architecture_docs.md  product_requirement_docs.md  project_status.md
tasks/: active_context.md  tasks_plan.md
tests/: __init__.py  test_ai_services.py
